vite-dev.err
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/auth/AuthProvider.tsx?t=1781469092954' does not provide an export named 'useAuth'
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/components/auth/ProtectedRoute.tsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/auth/AuthProvider.tsx?t=1781469092954' does not provide an export named 'useAuth'
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/pages/AuthPage.tsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/auth/AuthProvider.tsx?t=1781469092954' does not provide an export named 'useAuth'
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/components/layout/Navbar.tsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/auth/AuthProvider.tsx?t=1781469092954' does not provide an export named 'useAuth'
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/pages/GuestListPage.tsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/auth/AuthProvider.tsx?t=1781469092954' does not provide an export named 'useAuth'
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/App.tsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/auth/AuthProvider.tsx?t=1781469092954' does not provide an export named 'useAuth'
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/pages/ListDetailPage.tsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/auth/AuthProvider.tsx?t=1781469092954' does not provide an export named 'useAuth'
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/pages/HomePage.tsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/auth/AuthProvider.tsx?t=1781469092954' does not provide an export named 'useAuth'
[2m17:31:33[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/pages/ListPage.tsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m17:31:49[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mError[22m: useAuth deve ser usado dentro de AuthProvider.
[39m > useAuth src/auth/AuthProvider.tsx:76:9
    74 |          if (error) throw error
    75 |  
    76 |          return { needsConfirmation: !data.session }
       |           ^
    77 |        },
    78 |        async signOut() {
 > Navbar src/components/layout/Navbar.tsx:7:28
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17
 > runWithFiberInDEV node_modules/react-dom/cjs/react-dom-client.development.js:871:29
 > performUnitOfWork node_modules/react-dom/cjs/react-dom-client.development.js:17641:21
 > workLoopSync node_modules/react-dom/cjs/react-dom-client.development.js:17469:40
 > renderRootSync node_modules/react-dom/cjs/react-dom-client.development.js:17450:10

[2m17:31:49[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <Navbar> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

[2m17:31:58[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mError[22m: useAuth deve ser usado dentro de AuthProvider.
[39m > useAuth src/auth/AuthProvider.tsx:76:9
    74 |          if (error) throw error
    75 |  
    76 |          return { needsConfirmation: !data.session }
       |           ^
    77 |        },
    78 |        async signOut() {
 > useWishlist src/hooks/useWishlist.ts:26:33
 > HomePage src/pages/HomePage.tsx:6:24
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17
 > runWithFiberInDEV node_modules/react-dom/cjs/react-dom-client.development.js:871:29
 > performUnitOfWork node_modules/react-dom/cjs/react-dom-client.development.js:17641:21
 > workLoopSync node_modules/react-dom/cjs/react-dom-client.development.js:17469:40

[2m17:31:58[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <HomePage> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

[2m17:32:03[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [31m[Unhandled error] [1mError[22m: useAuth deve ser usado dentro de AuthProvider.
[39m > useAuth src/auth/AuthProvider.tsx:76:9
    74 |          if (error) throw error
    75 |  
    76 |          return { needsConfirmation: !data.session }
       |           ^
    77 |        },
    78 |        async signOut() {
 > useWishlist src/hooks/useWishlist.ts:26:33
 > HomePage src/pages/HomePage.tsx:6:24
 > Object.react_stack_bottom_frame node_modules/react-dom/cjs/react-dom-client.development.js:25904:19
 > renderWithHooks node_modules/react-dom/cjs/react-dom-client.development.js:7662:21
 > updateFunctionComponent node_modules/react-dom/cjs/react-dom-client.development.js:10166:18
 > beginWork node_modules/react-dom/cjs/react-dom-client.development.js:11778:17
 > runWithFiberInDEV node_modules/react-dom/cjs/react-dom-client.development.js:871:29
 > performUnitOfWork node_modules/react-dom/cjs/react-dom-client.development.js:17641:21
 > workLoopSync node_modules/react-dom/cjs/react-dom-client.development.js:17469:40

[2m17:32:03[22m [33m[1m[vite][22m[39m [33m[2m(client)[22m[39m [2m[console.warn] [22mAn error occurred in the <HomePage> component.

Consider adding an error boundary to your tree to customize error handling behavior.
Visit https://react.dev/link/error-boundaries to learn more about error boundaries.

[2m17:32:07[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] SyntaxError: The requested module '/src/auth/AuthProvider.tsx?t=1781469092954' does not provide an export named 'useAuth'
[2m17:32:07[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22m[vite] Failed to reload /src/pages/GuestListPage.tsx. This could be due to syntax errors or importing non-existent modules. (see errors above)
[2m17:36:53[22m [31m[1m[vite][22m[39m [31m[2m(client)[22m[39m [2m[console.error] [22mTypeError: Failed to fetch
    at http://localhost:5173/node_modules/.vite/deps/@supabase_supabase-js.js?v=03074a16:13198:22
    at _handleRequest (http://localhost:5173/node_modules/.vite/deps/@supabase_supabase-js.js?v=03074a16:13472:18)
    at _request (http://localhost:5173/node_modules/.vite/deps/@supabase_supabase-js.js?v=03074a16:13459:21)
    at SupabaseAuthClient.signUp (http://localhost:5173/node_modules/.vite/deps/@supabase_supabase-js.js?v=03074a16:16407:17)
    at signUp (http://localhost:5173/src/auth/AuthProvider.tsx:45:48)
    at handleSubmit (http://localhost:5173/src/pages/AuthPage.tsx:38:26)
    at executeDispatch (http://localhost:5173/node_modules/.vite/deps/react-dom_client.js?v=03074a16:9140:5)
    at runWithFiberInDEV (http://localhost:5173/node_modules/.vite/deps/react-dom_client.js?v=03074a16:850:66)
    at processDispatchQueue (http://localhost:5173/node_modules/.vite/deps/react-dom_client.js?v=03074a16:9166:27)
    at http://localhost:5173/node_modules/.vite/deps/react-dom_client.js?v=03074a16:9453:5
